--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,7 @@
-.App {
-  text-align: center;
+.buttons-grid {
+  display: grid;
+  gap: 20px;
+  grid-template-columns: repeat(auto-fill, 200px);
+
+  margin: 20px;
 }
