--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,3 @@
-.buttons-grid {
-  display: grid;
-  gap: 20px;
-  grid-template-columns: repeat(auto-fill, 200px);
-
-  margin: 20px;
+.App {
+  text-align: center;
 }
