--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,3 +30,9 @@
   height: 5000px;
   width: 5000px;
 }
+
+@media (min-width: 2470px) {
+  .primary-background::before {
+    transform: rotate(11deg) translate(-450px, calc(-1600px + (2vh * 30)));
+  }
+}
