--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,4 +6,11 @@
   --primary-color: #ffffff;
   --secondary-color: #000000;
   --accent-color: #aaaaaa;
+
+  --primary-background-color: var(--primary-color);
+  --primary-text-color: var(--secondary-color);
+  --secondary-background-color: var(--secondary-color);
+  --secondary-text-color: var(--primary-color);
+  --accent-background-color: var(--accent-color);
+  --accent-text-color: var(--primary-color);
 }
