--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@
 
   --primary-color: #ffffff;
   --secondary-color: #000000;
-  --accent-color: #aaaaaa;
+  --accent-color: #8c8c8c;
 
   --primary-background-color: var(--primary-color);
   --primary-text-color: var(--secondary-color);
