--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,7 +36,8 @@
   overflow: hidden;
 }
 
-.primary-background::before {
+.primary-background::before,
+.primary-background-modal::before {
   content: '';
   position: absolute;
   z-index: -1;
@@ -49,16 +50,8 @@
 }
 
 .primary-background-modal::before {
-  content: '';
-  position: absolute;
-  z-index: -1;
-  background-image: url('./assets/halftone-effect.svg');
-  background-size: contain;
   background-color: var(--primary-background-color);
   transform: rotate(11deg) translate(-3000px, calc(-1150px));
-  background-repeat: repeat-x;
-  height: 5000px;
-  width: 4200px;
 }
 
 @media (min-width: 2470px) {
